# jpec-website

./: .buildpacks  .env  Cargo.toml  Procfile  README.md  composer.json
jpec-api/: .env  Cargo.toml  Procfile  composer.json  db_reload.sh
jpec-api/config/: bundles.php  parameters.yml
jpec-api/src/: main.rs
jpec-api/src/Controller/: AnswerController.php  CardController.php  DeckController.php  HomeController.php  ReviewController.php  SecurityController.php
jpec-api/src/DTO/: CardDTO.php  DeckDTO.php
jpec-api/src/DataFixtures/: AnswerFixtures.php  BaseFixture.php  CardFixtures.php  DeckFixtures.php  UserFixtures.php
jpec-api/src/Entity/: Answer.php  ApiToken.php  Card.php  CardBatch.php  CardBatchMeta.php  Deck.php  User.php  UserCardInfo.php
jpec-api/src/Form/: AnswerFormType.php  CardBatchFormType.php  CardBatchMetaFormType.php  CardFormType.php  DeckFormType.php
jpec-api/src/IA/NumberRecognition/: mnist_number.py
jpec-api/src/Migrations/: Version20200403195001.php  Version20200413085255.php  Version20200413132647.php  Version20200413164406.php  Version20200413165239.php
jpec-api/src/Repository/: ApiTokenRepository.php  DeckRepository.php  UserCardInfoRepository.php
jpec-api/src/Security/: ApiTokenAuthenticator.php
jpec-api/src/Service/: CardService.php  DeckService.php  ReviewService.php  TokenService.php
jpec-api/src/Traits/: FormTrait.php
jpec-api/tensorflow/models/: model.json
jpec-front/: package-lock.json  package.json
jpec-front/public/: index.html
jpec-front/src/: App.tsx  (+1 more)
src/: main.rs
tensorflow/: mnist_model_gen.py
(+24 files in other folders)
