[package]
name = "jpec-website"
version = "0.1.0"
authors = ["Jpec57 <jean.paul.bella@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.3", features = ["postgres"] }
dotenv = "0.15.0"
tensorflow = "0.14.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]