[package]
name = "jpec-website"
version = "0.1.0"
authors = ["Jpec57 <jean.paul.bella@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
#rocket_cors = "0.2.3"
